# inlinestyle2css

./: LICENSE  README.md  setup.cfg
inlinestyle2css/: .project  .pydevproject  setup.cfg
inlinestyle2css/src/: __init__.py  elem2html.py  formathtml.py  html2elem.py
inlinestyle2css/src/inlinestyle2css/: __main__.py  main.py  tocss.py
