[metadata]
name = inlinestyle2css
version = attr: inlinestyle2css.__version__
url = https://github.com/p--q/inlinestyle2css
download_url =
project_urls = 
author = P--Q
author_email = pq.blogspot@gmail.com
classifiers =
    Development Status :: 3 - Alpha  
    Environment :: Console  
    Intended Audience :: Developers  
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only  
    Programming Language :: Python :: 3.5
license_file = LICENSE
description = 
long_description = file: README.md
keywords =
platforms = 

[options]
zip_safe = False
install_requires = []
python_requires = >=3.5
entry_points = file: entry_points.cfg
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
